@@ -4,6 +4,9 @@
 
 /build/
 /dist/
+/test/
+
+/local
 
 __pycache__
 
